# taskmanager-mcp

./: .bandit  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .semgrepignore  Dockerfile  Makefile  README.md  README_OAUTH_INTEGRATION.md  SECURITY.md  auth_server.py  check_claude_client.py  debug_token_endpoint.py  docker-compose.yml  fix_claude_redirect_uri.py  main.py  mypy.ini  output.txt  pyproject.toml  pyrefly.toml  pytest.ini  requirements.txt  server.py  setup_oauth_client.py  simple_auth_provider.py  task_api.py  taskmanager_oauth.py  taskmanager_oauth_provider.py  test_client.py  test_setup.py  token_verifier.py  update_claude_secret.py  upload_claude_client.py  verify_client_secret.py
.github/workflows/: ci.yml  security.yml
taskmanager_mcp/: __init__.py  auth_server.py  server.py  taskmanager_oauth_provider.py  token_storage.py  token_verifier.py
tests/: conftest.py  test_mcp_tools.py  test_server.py  test_task_api.py  test_token_verifier.py
